--- a/heart_output.tex
+++ b/heart_output.tex
@@ -2,7 +2,9 @@
 \usepackage{geometry}
 \geometry{a4paper, margin=1in}
 \usepackage{longtable}
+\title{Heart Data}
 \begin{document}
+\maketitle
 \begin{longtable}{|c|c|c|c|c|c|c|c|c|c|c|c|c|c|}
 \hline
 age & sex & cp & trestbps & chol & fbs & restecg & thalach & exang & oldpeak & slope & ca & thal & target\\
